--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+Docs/References
+Docs/Homeworks
+
 # Created by https://www.toptal.com/developers/gitignore/api/java,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse
 
