--- a/sts/BankDB/src/main/webapp/WEB-INF/web.xml
+++ b/sts/BankDB/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,7 @@
 
 
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<!-- context-param에는 공동 xml을 넣음 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
