--- a/clova/ClovaProj/build.gradle
+++ b/clova/ClovaProj/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 	
+	implementation('org.apache.tomcat.embed:tomcat-embed-jasper')  
+	implementation('javax.servlet:jstl:1.2')
+	implementation('org.apache.tiles:tiles-jsp:3.0.4')
 }
 
 test {
