--- a/clova/ClovaProj/src/main/resources/application.properties
+++ b/clova/ClovaProj/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8090
 
+spring.mvc.view.prefix:/WEB-INF/views/
+spring.mvc.view.suffix:.jsp
+
 spring.mandatory-file-encoding=UTF-8
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
